# ctypes_sample

./: .gitignore  CMakeLists.txt  README.md  cspell.json  hatch_build.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-wheel-multi-platform.yml  cmake-multi-platform.yml  release.yml
ctypes_sample/: __init__.py  ctypes_sample.py
include/: sample.h
src/: sample.c
test/: conftest.py  test_build_tag.py  test_ctypes.py
work/: t.c
