[project]
name = "ctypes_sample"
authors = [
    { name = "Tobikura", email = "8867963+tobikura@users.noreply.github.com" },
]
description = "Example of calling a shared libarary using ctypes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]

dynamic = ["version", "dependencies"]

[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.hooks.vcs]
version-file = "ctypes_sample/_version.py"

# call hatch_build.py
[tool.hatch.build.hooks.custom]
# python_tag = "py39"
# abi_tag = "none"
# platform_tag = "linux_x86_64"

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "*.dll", "*.dylib"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []

fixable = ["ALL"]

[tool.pytest.ini_options]
#pythonpath = "ctypes_sample"
testpaths = ["test"]
addopts = "-s"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["macholib", "macholib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [".hatch_build_macos"]
ignore_missing_imports = true
